Allow easy passing of parameters to command line, improve configuration, logging.

--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,7 @@ skip_missing_interpreters = True
 # TODO: Replicated in setup.py
 deps =
     pyyaml
+    termcolor
     nose
     testfixtures
 commands = nosetests
