Cache stat calls for improved performance.

--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,9 @@ skip_missing_interpreters = True
 [testenv]
 # TODO: Replicated in setup.py
 deps =
+    prwlock
     pyyaml
+    sortedcontainers
     termcolor
     nose
     testfixtures
