Support async contexts inside build steps.

--- a/tox.ini
+++ b/tox.ini
@@ -4,6 +4,7 @@ skip_missing_interpreters = True
 [testenv]
 # TODO: Replicated in setup.py
 deps =
+    aiorwlock
     nose
     testfixtures
 commands = nosetests
