--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,4 @@ python: [ "3.6", "3.7", "3.8", "3.9" ]
 install:
 - pip install -e .[develop]
 script:
-- python setup.py all
+- if [[ "$TRAVIS_PYTHON_VERSION" == "3.6" ]]; then tox; else python setup.py all; fi
