--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py36,py37,py38,py39
+envlist = py37,py38,py39
 skip_missing_interpreters = True
 [testenv]
 # TODO: Replicated in setup.py
