Use PyTest, run in conda environment, update for latest dependencies.

--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,6 @@ skip_missing_interpreters = True
 # TODO: Replicated in setup.py
 deps =
     aiorwlock
-    nose
+    pytest
     testfixtures
-commands = nosetests
+commands = pytest
