Switch to Makefile based on cleaner project template.

--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,47 @@
+*py.class
+_build
 build
+.cache
+Cargo.lock
+cobertura.xml
+*.cover
 .coverage
+.coverage.*
+coverage.xml
+develop-eggs
 dist
-dynamake/version.py
+downloads
+*.egg
 *.egg-info
 .eggs
-html
+eggs
+.env
+env
+ENV
 htmlcov
-junk*
-metacell/version.py
-.mypy_cache
-.publish_html
-__pycache__
-.reformat
-sphinx/generated
-sphinx/*.rst
-.*.swo
-.*.swp
+.installed.cfg
+*junk*
+.make.*
+*.manifest
+.mypy_cache/
+nosetests.xml
+parts
+*.pdf
+pip-delete-this-directory.txt
+pip-log.txt
+_pycache__
+*.py[cod]
+.pytest_cache
+.Python
+.python-version
+*.rs.bk
+sdist
+*.spec
+*.svg
+.*.sw*
 tags
+target
 .tox
+var
+.venv
+venv
