--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,19 @@
 [tox]
-envlist = py37,py38,py39
+envlist = py37, py38, py39
 skip_missing_interpreters = True
+
+[travis]
+python =
+    3.7: py37
+    3.8: py38
+    3.9: py39
+
 [testenv]
-# TODO: Replicated in setup.py
+setenv =
+    PYTHONPATH = {toxinidir}
 deps =
-    aiorwlock
-    pytest
-    testfixtures
-commands = pytest
+    -rrequirements.txt
+    -rrequirements_test.txt
+commands =
+    pip install -U pip
+    pytest --basetemp={envtmpdir}
