--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,11 @@
-include dynamake/py.typed
-include tests/*.py
-include tools/*
-include tox.ini
-exclude .*.swp
-exclude */.*.swp
+include HISTORY.rst
+include LICENSE.rst
+include README.rst
+include requirements.txt
+include requirements_test.txt
+include requirements_dev.txt
+
+recursive-include tests *
+recursive-include dynamake py.typed
+recursive-exclude * __pycache__
+recursive-exclude * *.py[co]
