--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,31 @@
 [bumpversion]
-current_version = 0.6.0
+current_version = 0.6.0-dev.1
 commit = True
 tag = True
+parse = 
+	(?P<major>\d+)
+	\.
+	(?P<minor>\d+)
+	\.
+	(?P<patch>\d+)
+	(\-(?P<rel>[a-z]+)\.(?P<dev>\d+))?
+serialize = 
+	{major}.{minor}.{patch}-{rel}.{dev}
+	{major}.{minor}.{patch}
+
+[bumpversion:part:rel]
+optional_value = rel
+first_value = dev
+values = 
+	dev
+	rel
+
+[bumpversion:part:dev]
+first_value = 1
+
+[bumpversion:file:README.rst]
+search = DynaMake {current_version}
+replace = DynaMake {new_version}
 
 [bumpversion:file:setup.py]
 search = version="{current_version}"
@@ -10,6 +34,14 @@ replace = version="{new_version}"
 [bumpversion:file:dynamake/__init__.py]
 search = __version__ = "{current_version}"
 replace = __version__ = "{new_version}"
+
+[bumpversion:file:docs/index.rst]
+search = DynaMake {current_version}
+replace = DynaMake {new_version}
+
+[bumpversion:file:docs/conf.py]
+search = version = "{current_version}"
+replace = version = "{new_version}"
 
 [bdist_wheel]
 universal = 1
