Improved mypy options.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,9 @@
+[mypy]
+warn_redundant_casts = True
+disallow_untyped_defs = True
+warn_unused_ignores = True
+scripts_are_modules = True
+
 [bumpversion]
 current_version = 0.6.2-dev.1
 commit = True
